<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="Home">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/heading_logo"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="EN"
                    android:textSize="18sp"
                    android:fontFamily="@font/inter_medium"
                    android:textStyle="bold"
                    android:layout_toStartOf="@id/noti"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="6dp"/>
                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/notification"
                    android:background="@color/transparent"
                    android:layout_alignParentEnd="true"
                    android:id="@+id/noti"/>
            </RelativeLayout>

            <androidx.appcompat.widget.SearchView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/search_bar"
                app:layout_constraintTop_toBottomOf="@id/text"
                android:background="@drawable/shape_search"
                app:closeIcon="@drawable/dots"
                app:searchHintIcon="@drawable/search_icon"
                app:searchIcon="@drawable/search_icon"
                app:queryHint="What are you looking for?"
                app:iconifiedByDefault="false"
                android:elevation="1dp"
                android:layout_marginTop="15dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">
                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/location"
                    android:background="@color/transparent"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="Barsha Heights, Tecom, Al Nagar"
                    android:textSize="14sp"
                    android:fontFamily="@font/inter_medium"
                    android:layout_marginStart="10dp"/>

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/drop_down"
                    android:background="@color/transparent"
                    android:layout_marginStart="10dp"/>
            </LinearLayout>

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/banner_main"
                android:background="@color/transparent"
                android:layout_marginTop="10dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="90dp"
                    android:layout_height="100dp"
                    android:orientation="vertical"
                    android:padding="5dp"
                    android:id="@+id/first"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="15sp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/doctor"
                        android:layout_marginStart="20dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/doctor_text"
                        android:textColor="@color/black"
                        android:textAlignment="center"
                        android:fontFamily="@font/inter_bold"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="90dp"
                    android:layout_height="100dp"
                    android:orientation="vertical"
                    android:padding="5dp"
                    android:layout_marginTop="15sp"
                    android:layout_toEndOf="@id/first"
                    android:layout_marginStart="50dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/buty"
                        android:layout_marginStart="20dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/buty_text"
                        android:textColor="@color/black"
                        android:textAlignment="center"
                        android:fontFamily="@font/inter_bold"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="90dp"
                    android:layout_height="100dp"
                    android:orientation="vertical"
                    android:padding="5dp"
                    android:id="@+id/end"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="15sp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/therophy"
                        android:layout_marginStart="20dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/therapy_text"
                        android:textColor="@color/black"
                        android:textAlignment="center"
                        android:fontFamily="@font/inter_bold"/>
                </LinearLayout>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="90dp"
                    android:layout_height="100dp"
                    android:orientation="vertical"
                    android:padding="5dp"
                    android:id="@+id/first1"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="15sp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/blood_test"
                        android:layout_marginStart="20dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lab_text"
                        android:textColor="@color/black"
                        android:textAlignment="center"
                        android:fontFamily="@font/inter_bold"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="90dp"
                    android:layout_height="100dp"
                    android:orientation="vertical"
                    android:padding="5dp"
                    android:layout_marginTop="15sp"
                    android:layout_toEndOf="@id/first1"
                    android:layout_marginStart="50dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/physio"
                        android:layout_marginStart="20dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Chiropractic_text"
                        android:textColor="@color/black"
                        android:textAlignment="center"
                        android:fontFamily="@font/inter_bold"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="90dp"
                    android:layout_height="100dp"
                    android:orientation="vertical"
                    android:padding="5dp"
                    android:id="@+id/end1"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="15sp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/home_care"
                        android:layout_marginStart="20dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nursing_text"
                        android:textColor="@color/black"
                        android:textAlignment="center"
                        android:fontFamily="@font/inter_bold"/>
                </LinearLayout>
            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>